<resources>
    <string name="app_name">M3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_moviesaerch">Moviesearch</string>
    <string name="menu_moviememoir">Moviememoir</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_reports">Report</string>
    <string name="menu_map">Map</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_movieview">Movieview</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_Signin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_lower">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="Signin_failed">"Login failed"</string>
    <!--sign up fragment-->
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="surname">SurName</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string-array name="array_state">
        <item>VIC</item>
        <item>NT</item>
        <item>SA</item>
        <item>ACT</item>
        <item>WA</item>
    </string-array>
    <string-array name="array_year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="filter_genre">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Family</item>
        <item>History</item>
        <item>Romance</item>
        <item>War</item>
    </string-array>
    <string name="title_activity_signin">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_year">Select Year</string>


</resources>