<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.m3app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
<!--            app:destination="@id/nav_home_second" />-->
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.example.m3app.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_moviesearch"
        android:name="com.example.m3app.ui.moviesearch.MovieSearchFragment"
        android:label="@string/menu_moviesaerch"
        tools:layout="@layout/fragment_moviesearch" />

    <fragment
        android:id="@+id/nav_moviememoir"
        android:name="com.example.m3app.ui.moviememoir.MovieMemoirFragment"
        android:label="@string/menu_moviememoir"
        tools:layout="@layout/movie_memoir_fragment" />

    <fragment
        android:id="@+id/nav_watchlist"
        android:name="com.example.m3app.ui.watchlist.WatchListFragment"
        android:label="@string/menu_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.m3app.ui.reports.reportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/reports_fragment" />

    <fragment
        android:id="@+id/nav_movie_view_fragment"
        android:name="com.example.m3app.ui.moviesearch.MovieViewFragment"
        android:label="MovieView"
        tools:layout="@layout/movie_view_fragment" />

    <fragment
        android:id="@+id/nav_add_to_memoir"
        android:name="com.example.m3app.ui.moviesearch.AddToMemoirFragment"
        android:label="Add to Memoir"
        tools:layout="@layout/movie_view_fragment" />


    <activity
        android:id="@+id/nav_map"
        android:name="com.example.m3app.ui.map.MapActivity"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_map" />


</navigation>